# safrimba-smartcontract

./: .contract_address  .gitignore  Cargo.toml  DEPLOYMENT.md  FRONTEND_INTEGRATION_GUIDE.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  test_wallets_info.md
.cargo/: config.toml
config/: deploy.toml  network_config.toml
scripts/: FAST_TEST_SUMMARY.md  FINAL_TEST_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  SIMULATION_GUIDE.md  comprehensive_test.sh  demo_simulation.sh  simulation_config.env  test_simulation.sh  tontine_simulation.sh
src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
tests/: integration_test.rs
