[package]
name = "tontine-contract"
version = "0.1.0"
edition = "2021"

[features]
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0"
cosmwasm-storage = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
schemars = "0.8.16"
thiserror = "1.0"
cw-ownable = "0.3.0"

[dev-dependencies]
cosmwasm-schema = "1.4.0"
cw-multi-test = "0.20.0"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false
